# news_service

./: README.md  docker-compose.yaml
api/: .env  Dockerfile  Dockerfile.taskiq  alembic.ini  entrypoint.sh  pyproject.toml  taskiq_entrypoint.sh
api/app/: main.py
api/app/application/api/: __init__.py  news.py  sources.py  users.py
api/app/core/config/: config.py  models.py
api/app/core/dto/: __init__.py  source.py  user.py
api/app/core/migrations/: env.py
api/app/core/migrations/versions/: b4306db4f21c_.py
api/app/core/providers/: __init__.py  base_provider.py  repository_provider.py  service_provider.py
api/app/repository/implementations/: __init__.py  source_repository.py  user_repository.py
api/app/repository/interfaces/: redis_repository.py  sqlalchemy_repository.py
api/app/repository/models/: __init__.py  source.py  user.py
api/app/services/: __init__.py  base.py  news_service.py  scheduler.py  source_service.py  user_service.py
bot/: .env
bot/bot/: __main__.py
bot/bot/application/: __init__.py  states.py
bot/bot/application/dialogs/: __init__.py
bot/bot/application/dialogs/news_dialog/: __init__.py  dialog.py  getters.py
bot/bot/application/handlers/: commands_handler.py
bot/bot/core/: enums.py
bot/bot/core/config/: config.py
bot/bot/core/dto/: news.py  source.py  user.py
bot/bot/core/providers/: __init__.py  service_provider.py
bot/bot/infrastructure/middlewares/: i18n.py  register_middleware.py
bot/bot/locales/: stub.pyi
bot/bot/services/: base.py  news_service.py  source_service.py  user_service.py
(+9 files in other folders)
