[tool.poetry]
name = "comments-service"
version = "0.1.0"
description = ""
authors = ["dmitriy <dmitriydmgora@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
redis = "^5.0.8"
dishka = "^1.3.0"
environs = "^11.0.0"
aiohttp = "^3.10.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
alembic = "^1.13.3"
taskiq = "^0.11.7"
taskiq-redis = "^1.0.2"
fake-useragent = "^1.5.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
